--- a/Spring-Boot_1_X/MVCWebApp/build.gradle
+++ b/Spring-Boot_1_X/MVCWebApp/build.gradle
@@ -11,10 +11,11 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-jar {
+war {
 	baseName = 'MVCWebApp'
 	version = '0.0.1-SNAPSHOT'
 }
